--- a/Presentation/VotingAPI.WebAPI/appsettings.json
+++ b/Presentation/VotingAPI.WebAPI/appsettings.json
@@ -11,5 +11,10 @@
     "Audience": "www.votingapp.com",
     "Issuer": "www.votingapi.com",
     "SecurityKey": "bu uygulama pratik amaçlıdır."
+  },
+  "Mail": {
+    "UserName": "omerisler20@gmail.com",
+    "Password": "omermen77",
+    "Host": "srvc179.turhost.com"
   }
 }
