--- a/Presentation/VotingAPI.WebAPI/appsettings.json
+++ b/Presentation/VotingAPI.WebAPI/appsettings.json
@@ -12,9 +12,16 @@
     "Issuer": "www.votingapi.com",
     "SecurityKey": "bu uygulama pratik amaçlıdır."
   },
-  "Mail": {
-    "UserName": "omerisler20@gmail.com",
-    "Password": "omermen77",
-    "Host": "srvc179.turhost.com"
+  "MailSettings": {
+    "Mail": "omerisler20@gmail.com",
+    "DisplayName": "VotingApi",
+    "Password": "theupzaekzjjaqnn",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
+  "SchoolDomain": {
+    "General": "iyte.edu.tr",
+    "Student": "std.iyte.edu.tr",
+    "Employee": "pers.iyte.edu.tr"
   }
 }
