--- a/Core/VotingAPI.Application/VotingAPI.Application.csproj
+++ b/Core/VotingAPI.Application/VotingAPI.Application.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Dto\Request\ProfilePhoto\**" />
+    <EmbeddedResource Remove="Dto\Request\ProfilePhoto\**" />
+    <None Remove="Dto\Request\ProfilePhoto\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\VotingAPI.Domain\VotingAPI.Domain.csproj" />
   </ItemGroup>
 
@@ -17,10 +23,6 @@
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Dto\Request\ProfilePhoto\" />
   </ItemGroup>
 
 </Project>
