--- a/Infrastructure/VotingAPI.Infrastructure/VotingAPI.Infrastructure.csproj
+++ b/Infrastructure/VotingAPI.Infrastructure/VotingAPI.Infrastructure.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\VotingAPI.Application\VotingAPI.Application.csproj" />
+    <ProjectReference Include="..\VotingAPI.ObsService\VotingAPI.ObsService.csproj" />
   </ItemGroup>
 
 </Project>
