--- a/Infrastructure/VotingAPI.Persistence/VotingAPI.Persistence.csproj
+++ b/Infrastructure/VotingAPI.Persistence/VotingAPI.Persistence.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\VotingAPI.Application\VotingAPI.Application.csproj" />
+    <ProjectReference Include="..\VotingAPI.ObsService\VotingAPI.ObsService.csproj" />
   </ItemGroup>
 
 </Project>
