--- a/Infrastructure/VotingAPI.Persistence/VotingAPI.Persistence.csproj
+++ b/Infrastructure/VotingAPI.Persistence/VotingAPI.Persistence.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\VotingAPI.ObsService\VotingAPI.ObsService.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
